Method load(Path) now also works for zipped knowledge bases